tests/snapshots/binding_analysis/non_name_targets.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/non_name_targets.input.py
---

