tests/snapshots/binding_analysis/non_name_targets.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/non_name_targets.input.py
---
bindings:
  - kinds:
      - ClassDef
    name: Holder
    read_offsets:
      - 261
    scope: 0
    write_offsets:
      - 231
  - kinds:
      - Assignment
    name: obj
    read_offsets:
      - 304
      - 317
    scope: 0
    write_offsets:
      - 250
  - kinds:
      - Assignment
    name: ix
    read_offsets:
      - 321
    scope: 0
    write_offsets:
      - 270
  - kinds:
      - Assignment
    name: xs
    read_offsets:
      - 358
    scope: 0
    write_offsets:
      - 283
  - kinds:
      - Assignment
    name: a
    read_offsets: []
    scope: 0
    write_offsets:
      - 330
  - kinds:
      - Assignment
    name: b
    read_offsets: []
    scope: 0
    write_offsets:
      - 333
  - kinds:
      - Assignment
    name: head
    read_offsets: []
    scope: 0
    write_offsets:
      - 345
  - kinds:
      - Assignment
    name: tail
    read_offsets: []
    scope: 0
    write_offsets:
      - 351
  - kinds:
      - Assignment
    name: c
    read_offsets: []
    scope: 0
    write_offsets:
      - 362
  - kinds:
      - Assignment
    name: d
    read_offsets: []
    scope: 0
    write_offsets:
      - 365
scopes:
  - bindings:
      Holder: 0
      a: 4
      b: 5
      c: 8
      d: 9
      head: 6
      ix: 2
      obj: 1
      tail: 7
      xs: 3
    kind: Module
    parent: ~
  - bindings: {}
    kind: Class
    parent: 0
