tests/snapshots/binding_analysis/nonlocal_global.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/nonlocal_global.input.py
---

