tests/snapshots/binding_analysis/nonlocal_global.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/nonlocal_global.input.py
---
bindings:
  - kinds:
      - FunctionDef
    name: globalized
    read_offsets: []
    scope: 0
    write_offsets:
      - 164
  - kinds:
      - Assignment
    name: x
    read_offsets: []
    scope: 1
    write_offsets:
      - 195
  - kinds:
      - FunctionDef
    name: nested
    read_offsets: []
    scope: 0
    write_offsets:
      - 207
  - kinds:
      - Assignment
    name: y
    read_offsets: []
    scope: 2
    write_offsets:
      - 221
  - kinds:
      - FunctionDef
    name: inner
    read_offsets:
      - 281
    scope: 2
    write_offsets:
      - 235
  - kinds:
      - Assignment
    name: y
    read_offsets: []
    scope: 3
    write_offsets:
      - 271
scopes:
  - bindings:
      globalized: 0
      nested: 2
    kind: Module
    parent: ~
  - bindings:
      x: 1
    kind: Function
    parent: 0
  - bindings:
      inner: 4
      y: 3
    kind: Function
    parent: 0
  - bindings:
      y: 5
    kind: Function
    parent: 2
