tests/snapshots/binding_analysis/walrus.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/walrus.input.py
---

