tests/snapshots/binding_analysis/walrus_in_comprehension.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/walrus_in_comprehension.input.py
---

