tests/snapshots/binding_analysis/walrus_in_comprehension.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/walrus_in_comprehension.input.py
---
bindings:
  - kinds:
      - Assignment
    name: xs
    read_offsets:
      - 228
    scope: 0
    write_offsets:
      - 194
  - kinds:
      - Comprehension
    name: x
    read_offsets:
      - 240
    scope: 1
    write_offsets:
      - 223
  - kinds:
      - Walrus
    name: y
    read_offsets:
      - 217
    scope: 0
    write_offsets:
      - 235
  - kinds:
      - Assignment
    name: vals
    read_offsets: []
    scope: 0
    write_offsets:
      - 209
scopes:
  - bindings:
      vals: 3
      xs: 0
      y: 2
    kind: Module
    parent: ~
  - bindings:
      x: 1
    kind: Comprehension
    parent: 0
