tests/snapshots/binding_analysis/with_statement.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/with_statement.input.py
---

