tests/snapshots/binding_analysis/with_statement.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/with_statement.input.py
---
bindings:
  - kinds:
      - FunctionDef
    name: read_lines
    read_offsets: []
    scope: 0
    write_offsets:
      - 147
  - kinds:
      - Parameter
    name: path
    read_offsets:
      - 179
    scope: 1
    write_offsets:
      - 158
  - kinds:
      - With
    name: f
    read_offsets:
      - 206
    scope: 1
    write_offsets:
      - 188
scopes:
  - bindings:
      read_lines: 0
    kind: Module
    parent: ~
  - bindings:
      f: 2
      path: 1
    kind: Function
    parent: 0
